--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -15,8 +15,8 @@
     <div class="container">
       <section class="filters">
 	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, Arizona...</h4>
+	  <h3>Provinces</h3>
+	  <h4>Western Cape, Gauteng...</h4>
 	</div>
 	<div class="amenities">
 	  <h3>Amenities</h3>
