--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -16,19 +16,19 @@
     <div class="container">
       <section class="filters">
 	<div class="locations">
-	  <h3>States</h3>
-          <h4>California, Arizona...</h4>
+	  <h3>Provinces</h3>
+          <h4>Western Cape, Gauteng...</h4>
           <ul class="popover">
-            <li><h2>Arizona:</h2>
+            <li><h2>Western Cape:</h2>
               <ul>
                 <li>Page</li>
                 <li>Page2</li>
               </ul>
             </li>
-            <li><h2>California:</h2>
+            <li><h2>Gauteng:</h2>
               <ul>
-                <li>San Francisco</li>
-                <li> Los Altos</li>
+                <li>Knysna</li>
+                <li>Cape Town</li>
               </ul>
           </ul>
         </div>
@@ -37,18 +37,18 @@
           <h4>Internet, Kitchen...</h4>
           <ul class="popover">
             <li>Internet</li>
-            <li>TV<li>
+            <li>Pool<li>
             <li>Kitchen</li>
-            <li>Iron</li>
+            <li>Laundry</li>
           </ul>
         </div>
 	<button>Search</button>
       </section>
       <section class="places">
         <h1>Places</h1>
-        <article><h2>My home</h2></article>
-        <article><h2>Tiny house</h2></article>
-        <article><h2>A suite</h2></article>
+        <article><h2>Flat</h2></article>
+        <article><h2>Beach Penthouse</h2></article>
+        <article><h2>Chalet</h2></article>
       </section>
     </div>
     <footer>
