--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -19,19 +19,19 @@
     <div class="container">
       <section class="filters">
 	<div class="locations">
-	  <h3>Province</h3>
-          <h4>Western Cape, Gauteng...</h4>
+	  <h3>States</h3>
+          <h4>California, Arizona...</h4>
           <ul class="popover">
-            <li><h2>Western Cape:</h2>
+            <li><h2>Arizona:</h2>
               <ul>
                 <li>Page</li>
                 <li>Page2</li>
               </ul>
             </li>
-            <li><h2>Western Cape:</h2>
+            <li><h2>California:</h2>
               <ul>
-                <li>Cape Town</li>
-                <li>Knysna</li>
+                <li>San Francisco</li>
+                <li> Los Altos</li>
               </ul>
           </ul>
         </div>
@@ -40,9 +40,9 @@
           <h4>Internet, Kitchen...</h4>
           <ul class="popover">
             <li>Internet</li>
-            <li>Pool<li>
+            <li>TV<li>
             <li>Kitchen</li>
-            <li>Laundry</li>
+            <li>Iron</li>
           </ul>
         </div>
 	<button>Search</button>
@@ -50,35 +50,35 @@
       <section class="places">
 	<h1>Places</h1>
         <article>
-          <h2>Flat</h2>
-          <div class="price_by_night">R1200</div>
+          <h2>My home</h2>
+          <div class="price_by_night">$80</div>
           <div class="information">
             <div class="max_guest">2 guests</div>
             <div class="number_rooms">1 bedroom</div>
             <div class="number_bathrooms">1 bathroom</div>
           </div>
-          <div class="user"><strong>Owner:</strong> Sakhile Motha</div>
-          <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It is located at the center of Cape Town, 1 stop to V and A Waterfront Mall, Mountain View, Ocean View and Sea View.</div>
+          <div class="user"><strong>Owner:</strong> Longye Chen</div>
+          <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It is located at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, and 3 stops to Jingan Temple.</div>
 	</article>
-        <article><h2>Beach Penthouse</h2>
-          <div class="price_by_night">R1800</div>
+        <article><h2>Tiny house</h2>
+          <div class="price_by_night">$50</div>
           <div class="information">
-            <div class="max_guest">2 guest</div>
+            <div class="max_guest">1 guest</div>
             <div class="number_rooms">1 bedroom</div>
             <div class="number_bathrooms">1 bathroom</div>
           </div>
-          <div class="user"><strong>Owner:</strong> Kamvalethu</div>
-          <div class="description">The penthouse has clean and modern features with it's own private plunge pool and sauna.</div>
+          <div class="user"><strong>Owner:</strong> Mel X</div>
+          <div class="description">This is a tiny, tight, and cozy getaway. Affordable and not too shabby. Perfect for those on a budget.</div>
         </article>
-        <article><h2>Chalet</h2>
-          <div class="price_by_night">R2500</div>
+        <article><h2>A suite</h2>
+          <div class="price_by_night">$160</div>
           <div class="information">
-            <div class="max_guest">4 guests</div>
-            <div class="number_rooms">2 bedroom</div>
+            <div class="max_guest">2 guests</div>
+            <div class="number_rooms">1 bedroom</div>
             <div class="number_bathrooms">2 bathrooms</div>
           </div>
-          <div class="user"><strong>Owner:</strong> Panashe Nyakonda</div>
-          <div class="description">A home away from home.</div>
+          <div class="user"><strong>Owner:</strong> Christina Chiu</div>
+          <div class="description">Beautiful suite with balcony worthy of Romeo and Juliet's love story.</div>
         </article>
       </section>
     </div>
